--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,12 +10,16 @@
   <body class="flex items-center justify-center min-h-screen bg-gray-100">
     <div class="text-center">
       <button
-        hx-get="/login"
-        hx-trigger="click"
-        class="px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700"
+        class="inline-flex items-center px-6 py-3 font-semibold text-gray-700 bg-white border border-gray-300 rounded-full shadow-md hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500"
       >
+        <img
+          src="/static/img/google-logo.jpg"
+          alt="Google logo"
+          class="w-6 h-6 mr-3"
+        />
         Sign in with Google
       </button>
+      <pre id="user-info" class="mt-4 text-left"></pre>
     </div>
   </body>
 </html>
