--- a/internal/templates/layout.templ
+++ b/internal/templates/layout.templ
@@ -44,7 +44,7 @@
         </div>
     </nav>
     <main class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 mt-6">
-        <div class="bg-white p-6 rounded-lg shadow-md text-gray-800">
+        <div class="bg-white p-6 rounded-lg text-gray-800">
             <h1 class="text-3xl font-bold mb-4">{{ .Header }}</h1>
             {{ block "content" . }}{{ end }}
         </div>
