Rander the layoutr

--- a/internal/templates/index.templ
+++ b/internal/templates/index.templ
@@ -1,5 +1,5 @@
 {{ define "content" }}
 <h1>Page Inedex</h1>
-<p>This is the content of Index.</p>
+<p>This is the content of Index.{{ .user.Email }}</p>
 {{ end }}
 
