--- a/internal/templates/layout.templ
+++ b/internal/templates/layout.templ
@@ -25,13 +25,13 @@
                     </div>
                 </div>
                 <div class="ml-4 flex items-center space-x-4">
-                    <span class="text-gray-300">Hi, {{.user.Name}}!</span>
+                    <span class="text-gray-300">Hi, {{.Name}}!</span>
                     <div class="relative">
                         <button class="relative flex max-w-xs items-center rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button">
                             <img
                                 alt="User Avatar"
                                 id="user-avatar"
-                                src="{{.user.Avatar}}" 
+                                src="{{.Avatar}}" 
                                 class="h-8 w-8 rounded-full"
                             />
                         </button>
