add the home table

--- a/internal/templates/index.templ
+++ b/internal/templates/index.templ
@@ -1,5 +1,63 @@
 {{ define "content" }}
-<h1>Page Inedex</h1>
-<p>This is the content of Index.{{ .user.Email }}</p>
+
+
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-700">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-200">
+            <tr>
+                <th scope="col" class="p-4">
+                    <div class="flex items-center">
+                        <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 focus:ring-2">
+                        <label for="checkbox-all-search" class="sr-only">checkbox</label>
+                    </div>
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Name
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    File Size
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Updated At
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Action
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            {{ if .Nodes }}
+                {{ range .Nodes }}
+                <tr class="bg-white border-b hover:bg-gray-50">
+                    <td class="w-4 p-4">
+                        <div class="flex items-center">
+                            <input id="checkbox-table-search-{{ .ID }}" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 focus:ring-2">
+                            <label for="checkbox-table-search-{{ .ID }}" class="sr-only">checkbox</label>
+                        </div>
+                    </td>
+                    <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">
+                        {{ .Name }}
+                    </th>
+                    <td class="px-6 py-4">
+                        {{ .FileSize }}
+                    </td>
+                    <td class="px-6 py-4">
+                        {{ .UpdatedAt }}
+                    </td>
+                    <td class="px-6 py-4">
+                        <a href="#" class="font-medium text-blue-600 hover:underline">Edit</a> | 
+                        <a href="#" class="font-medium text-red-600 hover:underline">Delete</a>
+                    </td>
+                </tr>
+                {{ end }}
+            {{ else }}
+                <tr>
+                    <td class="px-6 py-4 text-center text-sm text-gray-500" colspan="5">No nodes available.</td>
+                </tr>
+            {{ end }}
+        </tbody>
+    </table>
+</div>
+
 {{ end }}
 
