--- a/internal/templates/layout.templ
+++ b/internal/templates/layout.templ
@@ -44,10 +44,9 @@
         </div>
     </nav>
     <main class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 mt-6">
-        <div class="bg-white p-6 rounded-lg text-gray-800">
-            <h1 class="text-3xl font-bold mb-4">{{ .Header }}</h1>
-            {{ block "content" . }}{{ end }}
-        </div>
+        {{ template "header.templ" . }}
+        <div class="bg-white p-6 rounded-lg text-gray-800 mt-4">{{ block "content" . }}{{ end }}</div>
     </main>
 </body>
+<script src="static/js/popups.js"></script>
 </html>
