--- a/internal/templates/header.templ
+++ b/internal/templates/header.templ
@@ -20,7 +20,7 @@
             <label for="folderName" class="block text-sm font-medium text-gray-700">Folder Name</label>
             <input type="text" id="folderName" name="Name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
             <input type="hidden" name="Type" value="folder">
-            <input type="hidden" name="ParentID" value="">
+            <input type="hidden" name="ParentID" value="{{ .ParentID }}">
             <p class="error-message text-red-500 mt-2"></p>
             <div class="mt-4">
                 <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600">Create</button>
