--- a/internal/templates/header.templ
+++ b/internal/templates/header.templ
@@ -11,17 +11,12 @@
 <div id="modal" class="fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center hidden z-50">
     <div class="bg-white rounded-lg p-6 w-1/2 max-w-3xl">
         <h2 class="text-xl font-bold mb-4">Create a New Folder</h2>
-        <p class="error-message text-red-500 mt-2"></p>
-        <form 
-            hx-post="/node/create"  
-            hx-on="htmx:afterRequest: if (this.hasAttribute('hx-error')) { } else { window.location.reload(); }" 
-            hx-target="#modal .error-message" hx-swap="innerHTML"
-            >
+        <p id="error-message" class="text-red-500 mt-2"></p>
+        <form id="create-folder" hx-post="/node/create">
             <label for="folderName" class="block text-sm font-medium text-gray-700">Folder Name</label>
             <input type="text" id="folderName" name="Name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
             <input type="hidden" name="Type" value="folder">
             <input type="hidden" name="ParentID" value="{{ .ParentID }}">
-            <p class="error-message text-red-500 mt-2"></p>
             <div class="mt-4">
                 <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600">Create</button>
                 <button type="button" id="closeModal" class="bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600 ml-2">Close</button>
@@ -29,4 +24,3 @@
         </form>
     </div>
 </div>
-
