redirect to folder content

--- a/internal/templates/index.templ
+++ b/internal/templates/index.templ
@@ -65,7 +65,7 @@
                 {{ end }}
             {{ else }}
                 <tr>
-                    <td class="px-6 py-4 text-center text-sm text-gray-500" colspan="5">No nodes available.</td>
+                    <td class="px-6 py-4 text-center text-sm text-gray-500" colspan="5">No content available.</td>
                 </tr>
             {{ end }}
         </tbody>
