--- a/internal/templates/layout.templ
+++ b/internal/templates/layout.templ
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>    
     <script src="https://unpkg.com/htmx.org@2.0.1"></script>
-    <script src="static/js/layout.js"></script>
+    <script src="../static/js/layout.js"></script>
      <title>{{ .Title }}</title>
 </head>
 <body class="bg-white text-gray-800">
@@ -48,5 +48,5 @@
         <div class="bg-white p-6 rounded-lg text-gray-800 mt-4">{{ block "content" . }}{{ end }}</div>
     </main>
 </body>
-<script src="static/js/popups.js"></script>
+<script src="../static/js/popups.js"></script>
 </html>
