--- a/internal/templates/index.templ
+++ b/internal/templates/index.templ
@@ -39,7 +39,7 @@
                             <td class="px-6 py-4">{{ .UpdatedAt }}</td>
                             <td class="px-6 py-4">{{ .CreatedAt }}</td>
                             <td class="px-6 py-4">
-                                <a href="#" class="font-medium text-blue-600 hover:underline">Edit</a> | 
+                                <a href="/node/{{ .ID }}/delete" class="font-medium text-blue-600 hover:underline">Edit</a> | 
                                 <a href="#" class="font-medium text-red-600 hover:underline">Delete</a>
                             </td>
                         </tr>
