--- a/internal/templates/index.templ
+++ b/internal/templates/index.templ
@@ -39,8 +39,8 @@
                             <td class="px-6 py-4">{{ .UpdatedAt }}</td>
                             <td class="px-6 py-4">{{ .CreatedAt }}</td>
                             <td class="px-6 py-4">
-                                <a href="/node/{{ .ID }}/delete" class="font-medium text-blue-600 hover:underline">Edit</a> | 
-                                <a href="#" class="font-medium text-red-600 hover:underline">Delete</a>
+                                <a href="#" class="font-medium text-blue-600 hover:underline">Edit</a> | 
+                                <button hx-delete="/node/{{ .ID }}/delete" class="font-medium text-red-600 hover:underline">Delete</button>
                             </td>
                         </tr>
                     {{ else }}
@@ -64,7 +64,7 @@
                             <td class="px-6 py-4">{{ .CreatedAt }}</td>
                             <td class="px-6 py-4">
                                 <a href="#" class="font-medium text-blue-600 hover:underline">Edit</a> | 
-                                <a href="#" class="font-medium text-red-600 hover:underline">Delete</a>
+                                <button hx-delete="/node/{{ .ID }}/delete" class="font-medium text-red-600 hover:underline">Delete</button>
                             </td>
                         </tr>
                     {{ end }}
