--- a/internal/templates/header.templ
+++ b/internal/templates/header.templ
@@ -3,7 +3,7 @@
     <h1 class="text-3xl font-bold">{{ .Header }}</h1>
     <div class="flex space-x-2">
         <button id="createFolder" class="bg-gray-800 text-white px-4 py-2 rounded-md">Create Folder</button>
-        <button class="bg-gray-400 text-white px-4 py-2 rounded-md">Upload File</button>
+        <button class="bg-gray-400 text-white px-4 py-2 rounded-md">Upload File / Folder</button>
     </div>
 </div>
 
